[metadata]
name = zot4rst
version = 0.3.0
author = Erik Hetzner
author_email = egh@e6h.org
description = Zotero for reStructuredText
url = https://github.com/egh/zot4rst

[options]
packages = zot4rst, xciterst
install_requires =
    BeautifulSoup4>=3.2.0
    docutils>=0.9
    pyparsing>=1.5.7
    pyzotero>=0.9.9
scripts =
    bin/zotcite
    bin/zrst2html
    bin/zrst2odt
    bin/zrst2pseudoxml
    bin/zrst2rst
    bin/zupdatekeymap

[options.entry_points]
console_scripts =
    zrst2pdf = zot4rst.zrst2pdf:run

[options.extras_require]
pdf =
    rst2pdf >= 0.93
